--- a/style.css
+++ b/style.css
@@ -1,44 +1,98 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+.m-0{
+    margin: 0;
+}
+.p-0{
+    padding: 0;
+}
+.display-flex{
+    display: flex;
+}
+.br{
+    border: solid red 1px;
+}
+.nav a:hover {
+    background-color: black;
+  }
+
 .head{
     background-color: #3399CC;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    height: 110px;
+    padding:20px;
+    box-sizing: border-box;
+    color: white;
     font-size: 25px;
-    
 }
-.text
+.title
 {
-    color: white;  
-    margin-left: 20px;
+    font-weight:300;
 }
+   
 .nav{
     background-color: #333333;
-    padding:10px;
-    }
-.entry {
+    padding:6px;
+}
+.nav ul{
+    display: flex;
+    list-style:none;
+    
+}
+.navlink {
+    
     margin-right: 30px;
-    display: inline;    
     color: white;
-    font-weight: bold;
-    text-decoration: none;
+    text-decoration:none;
     margin-left: 6px;
+    font-weight: 500;   
+}
+.nav-blog-img{
+    margin-left: auto;
+    
 }
 .news{
     margin: 25px;
     margin-left: 40px;
-    border: 1px  black;
+    /* border: 1px  black; */
     border-style: ridge;
     width: 700px;
     height: 170px;
+    padding-left: 20px;
     
 }
 .ns{
-    margin-left: 10px;
+    margin-right: 300px;
+    margin-top: 10px;
+    font-weight: 400;
+    font-size:20px;
+    
 }
-.list
+.list-item
 {
-    margin-left: 20px;
+    
+    margin:10px;
+    font-size: 12px;
+    font-weight: 400;
+}
+.ul
+{
+    margin-top:-5px;
+    list-style:none;
+    margin-left:-5px;
+    
 }
 .welcome
 {
     margin-left: 40px;
+}
+.para
+{
+    font-size: 12px;
+    font-weight: 400;
+}
+.ptag{
+    font-weight:500;
 }
